--- a/libcore/build.gradle
+++ b/libcore/build.gradle
@@ -21,6 +21,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.alibaba:fastjson:1.2.7'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
 }
