--- a/libapicore/build.gradle
+++ b/libapicore/build.gradle
@@ -21,5 +21,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project(':libapi2')
+    compile project(':libnetcore')
 }
